# sdcc-pic-template

./: CMakeLists.txt  README.md
modules/: toolchain.cmake
modules/Platform/: .SDCC_PIC_16F877A.cmake.swp  SDCC_PIC_16F877A.cmake
